openshift-monitoring/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:49:24Z"
    labels:
      app.kubernetes.io/component: alert-router
      app.kubernetes.io/instance: main
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 0.23.0
    name: alertmanager-main
    namespace: openshift-monitoring
    resourceVersion: "476624658"
    uid: 5d74f189-39c1-40b0-9d23-d9cdb0619619
  subsets:
  - addresses:
    - ip: 10.128.23.11
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: alertmanager-main-0
        namespace: openshift-monitoring
        resourceVersion: "476624651"
        uid: a537b84f-4893-4fea-b9f3-2d8060fe42e6
    - ip: 10.131.22.226
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: alertmanager-main-1
        namespace: openshift-monitoring
        resourceVersion: "466147485"
        uid: 8940bec1-6bec-430e-ab5a-9ded23522ac6
    ports:
    - name: web
      port: 9095
      protocol: TCP
    - name: metrics
      port: 9097
      protocol: TCP
    - name: tenancy
      port: 9092
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:49:29Z"
    labels:
      operated-alertmanager: "true"
      service.kubernetes.io/headless: ""
    name: alertmanager-operated
    namespace: openshift-monitoring
    resourceVersion: "476624653"
    uid: 8d7ddc17-dc7a-4172-ae33-bb7b10683e14
  subsets:
  - addresses:
    - hostname: alertmanager-main-0
      ip: 10.128.23.11
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: alertmanager-main-0
        namespace: openshift-monitoring
        resourceVersion: "476624651"
        uid: a537b84f-4893-4fea-b9f3-2d8060fe42e6
    - hostname: alertmanager-main-1
      ip: 10.131.22.226
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: alertmanager-main-1
        namespace: openshift-monitoring
        resourceVersion: "466147485"
        uid: 8940bec1-6bec-430e-ab5a-9ded23522ac6
    ports:
    - name: web
      port: 9095
      protocol: TCP
    - name: udp-mesh
      port: 9094
      protocol: UDP
    - name: tcp-mesh
      port: 9094
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:36:08Z"
    labels:
      app: cluster-monitoring-operator
      service.kubernetes.io/headless: ""
    name: cluster-monitoring-operator
    namespace: openshift-monitoring
    resourceVersion: "114617535"
    uid: 804f3287-43bf-4722-bd43-ffaae88b7297
  subsets:
  - addresses:
    - ip: 10.130.0.17
      nodeName: ocp4azu-sj2sl-master-1
      targetRef:
        kind: Pod
        name: cluster-monitoring-operator-8fb889c6d-5kxml
        namespace: openshift-monitoring
        resourceVersion: "114617532"
        uid: ccccff3b-4ba7-4f84-81f3-a889b141ef0d
    ports:
    - name: https
      port: 8443
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:49:24Z"
    labels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 8.3.4
    name: grafana
    namespace: openshift-monitoring
    resourceVersion: "476624607"
    uid: 7e83f64d-d8e7-43d9-ae2c-a60d0198cbe7
  subsets:
  - addresses:
    - ip: 10.128.23.5
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: grafana-646ffd4688-sxm9m
        namespace: openshift-monitoring
        resourceVersion: "476624603"
        uid: 74903e7a-eaa4-4f7f-95d6-3a83ba8608ed
    ports:
    - name: metrics
      port: 3002
      protocol: TCP
    - name: https
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:41:43Z"
    labels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 2.3.0
      service.kubernetes.io/headless: ""
    name: kube-state-metrics
    namespace: openshift-monitoring
    resourceVersion: "476624561"
    uid: 32edcf26-ae56-435d-8bf3-d9a329a4aaaa
  subsets:
  - addresses:
    - ip: 10.128.23.4
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: kube-state-metrics-6694557dd7-c2hl8
        namespace: openshift-monitoring
        resourceVersion: "476624560"
        uid: 9b508386-ba2b-4943-b729-7266b208e0ec
    ports:
    - name: https-main
      port: 8443
      protocol: TCP
    - name: https-self
      port: 9443
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:41:43Z"
    labels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: node-exporter
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 1.3.1
      service.kubernetes.io/headless: ""
    name: node-exporter
    namespace: openshift-monitoring
    resourceVersion: "491646472"
    uid: 9e47511d-c301-4983-a159-5eee33fd0709
  subsets:
  - addresses:
    - ip: 10.80.80.11
      nodeName: ocp4azu-sj2sl-infra-brazilsouth1-5zvnf
      targetRef:
        kind: Pod
        name: node-exporter-26h7l
        namespace: openshift-monitoring
        resourceVersion: "460420427"
        uid: 6aff2c30-92bb-4b5c-956b-d05e3dc86510
    - ip: 10.80.80.12
      nodeName: ocp4azu-sj2sl-infra-brazilsouth2-ptg7h
      targetRef:
        kind: Pod
        name: node-exporter-vvl62
        namespace: openshift-monitoring
        resourceVersion: "458211548"
        uid: 7be3b67f-54ed-41f4-bbbe-4cdb5f19745b
    - ip: 10.80.80.13
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-mjsb5
      targetRef:
        kind: Pod
        name: node-exporter-5dvwq
        namespace: openshift-monitoring
        resourceVersion: "380476289"
        uid: 9eb81f27-3a0c-44ac-9023-7222915ca257
    - ip: 10.80.80.16
      nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
      targetRef:
        kind: Pod
        name: node-exporter-bgpqr
        namespace: openshift-monitoring
        resourceVersion: "467286814"
        uid: 1e1bbfc1-153d-460c-a128-c3f4983c3be7
    - ip: 10.80.80.17
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-gmw4z
      targetRef:
        kind: Pod
        name: node-exporter-qzb2n
        namespace: openshift-monitoring
        resourceVersion: "428583522"
        uid: 324728fe-d148-465c-8860-04ebcdb17060
    - ip: 10.80.80.18
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: node-exporter-8pg9s
        namespace: openshift-monitoring
        resourceVersion: "466147352"
        uid: 86c107bf-cad1-4774-a6ab-11868390cebe
    - ip: 10.80.80.19
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth1-lks8v
      targetRef:
        kind: Pod
        name: node-exporter-tjxtw
        namespace: openshift-monitoring
        resourceVersion: "491646468"
        uid: 46e25b77-16e8-476d-98d5-4ea244fe092e
    - ip: 10.80.80.22
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: node-exporter-kjrdb
        namespace: openshift-monitoring
        resourceVersion: "467404295"
        uid: 897574ad-4bc8-4e51-9183-d635584e4af5
    - ip: 10.80.80.23
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: node-exporter-zbn6q
        namespace: openshift-monitoring
        resourceVersion: "472847188"
        uid: f49b2fc7-8752-4113-87c3-d939c1fedd12
    - ip: 10.80.80.28
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
      targetRef:
        kind: Pod
        name: node-exporter-bnrd9
        namespace: openshift-monitoring
        resourceVersion: "472918108"
        uid: bb693217-1817-4553-91e0-70fdb07caef2
    - ip: 10.80.80.5
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: node-exporter-kbpgx
        namespace: openshift-monitoring
        resourceVersion: "476624981"
        uid: fa43a333-01a1-4b02-9442-f78cb7c75c5d
    - ip: 10.80.80.6
      nodeName: ocp4azu-sj2sl-master-0
      targetRef:
        kind: Pod
        name: node-exporter-8bv7p
        namespace: openshift-monitoring
        resourceVersion: "1605403"
        uid: 21c94274-5e1d-44e6-a7c6-6ee14bf84522
    - ip: 10.80.80.7
      nodeName: ocp4azu-sj2sl-master-2
      targetRef:
        kind: Pod
        name: node-exporter-g9wss
        namespace: openshift-monitoring
        resourceVersion: "465633581"
        uid: 5783c4f3-7c46-430d-864a-e46062709d48
    - ip: 10.80.80.8
      nodeName: ocp4azu-sj2sl-master-1
      targetRef:
        kind: Pod
        name: node-exporter-c2cxm
        namespace: openshift-monitoring
        resourceVersion: "114617664"
        uid: 331c5125-b381-4e9a-80e9-1b4285078634
    - ip: 10.80.80.9
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: node-exporter-pt9w7
        namespace: openshift-monitoring
        resourceVersion: "476624537"
        uid: 69eebae9-3c7e-4f1f-8f38-7c327dd66e36
    ports:
    - name: https
      port: 9100
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:41:43Z"
    labels:
      k8s-app: openshift-state-metrics
      service.kubernetes.io/headless: ""
    name: openshift-state-metrics
    namespace: openshift-monitoring
    resourceVersion: "472847054"
    uid: 183ca17f-f547-4b86-a187-3afce8b536c9
  subsets:
  - addresses:
    - ip: 10.128.20.11
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: openshift-state-metrics-6fb85b7448-tgj9v
        namespace: openshift-monitoring
        resourceVersion: "472847053"
        uid: 351a31d6-884c-4b9d-bdef-87ae70d67b17
    ports:
    - name: https-main
      port: 8443
      protocol: TCP
    - name: https-self
      port: 9443
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-30T04:38:52Z"
    creationTimestamp: "2023-05-04T21:41:44Z"
    labels:
      app.kubernetes.io/component: metrics-adapter
      app.kubernetes.io/name: prometheus-adapter
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 0.9.1
    name: prometheus-adapter
    namespace: openshift-monitoring
    resourceVersion: "487819110"
    uid: 3f0e7311-1a91-479d-ac98-4271ea0a7b90
  subsets:
  - addresses:
    - ip: 10.128.20.85
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: prometheus-adapter-fbd9f8875-krhpc
        namespace: openshift-monitoring
        resourceVersion: "487818972"
        uid: 3a39df19-c0b3-42e6-9959-d8f8d4197083
    - ip: 10.131.22.251
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: prometheus-adapter-fbd9f8875-qtkhj
        namespace: openshift-monitoring
        resourceVersion: "487819107"
        uid: 7a4b863b-f5de-4d7b-9caf-7cc25dfb0a1c
    ports:
    - name: https
      port: 6443
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:49:26Z"
    labels:
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 2.32.1
    name: prometheus-k8s
    namespace: openshift-monitoring
    resourceVersion: "476624977"
    uid: db306ab9-eb48-4ad6-8c9d-12c68f682ec9
  subsets:
  - addresses:
    - ip: 10.128.20.12
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: prometheus-k8s-1
        namespace: openshift-monitoring
        resourceVersion: "472847145"
        uid: 49b0f06c-2aff-4179-a003-bb625c2d6d07
    - ip: 10.130.20.113
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: prometheus-k8s-0
        namespace: openshift-monitoring
        resourceVersion: "476624973"
        uid: 532f38c7-13c3-4598-a9f7-8fe876003b67
    ports:
    - name: metrics
      port: 9092
      protocol: TCP
    - name: web
      port: 9091
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:49:26Z"
    labels:
      app.kubernetes.io/component: thanos-sidecar
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 2.32.1
      service.kubernetes.io/headless: ""
    name: prometheus-k8s-thanos-sidecar
    namespace: openshift-monitoring
    resourceVersion: "476624979"
    uid: 150c41ae-c742-40ad-99ab-2a8323e5bb12
  subsets:
  - addresses:
    - ip: 10.128.20.12
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: prometheus-k8s-1
        namespace: openshift-monitoring
        resourceVersion: "472847145"
        uid: 49b0f06c-2aff-4179-a003-bb625c2d6d07
    - ip: 10.130.20.113
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: prometheus-k8s-0
        namespace: openshift-monitoring
        resourceVersion: "476624973"
        uid: 532f38c7-13c3-4598-a9f7-8fe876003b67
    ports:
    - name: thanos-proxy
      port: 10902
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:49:34Z"
    labels:
      operated-prometheus: "true"
      service.kubernetes.io/headless: ""
    name: prometheus-operated
    namespace: openshift-monitoring
    resourceVersion: "476624975"
    uid: 40030282-3617-4299-a36f-1031e6a7aa45
  subsets:
  - addresses:
    - hostname: prometheus-k8s-1
      ip: 10.128.20.12
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: prometheus-k8s-1
        namespace: openshift-monitoring
        resourceVersion: "472847145"
        uid: 49b0f06c-2aff-4179-a003-bb625c2d6d07
    - hostname: prometheus-k8s-0
      ip: 10.130.20.113
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: prometheus-k8s-0
        namespace: openshift-monitoring
        resourceVersion: "476624973"
        uid: 532f38c7-13c3-4598-a9f7-8fe876003b67
    ports:
    - name: web
      port: 9091
      protocol: TCP
    - name: grpc
      port: 10901
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2023-05-04T21:41:26Z"
    creationTimestamp: "2023-05-04T21:41:26Z"
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: prometheus-operator
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 0.53.1
      service.kubernetes.io/headless: ""
    name: prometheus-operator
    namespace: openshift-monitoring
    resourceVersion: "1606939"
    uid: 3376700d-de18-4879-b855-9747421f729a
  subsets:
  - addresses:
    - ip: 10.129.0.24
      nodeName: ocp4azu-sj2sl-master-0
      targetRef:
        kind: Pod
        name: prometheus-operator-7f5fd7c7cf-hchpn
        namespace: openshift-monitoring
        resourceVersion: "1606557"
        uid: baca213e-0bb5-425d-afc5-99968e73926f
    ports:
    - name: web
      port: 8080
      protocol: TCP
    - name: https
      port: 8443
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:48:14Z"
    labels:
      k8s-app: telemeter-client
      service.kubernetes.io/headless: ""
    name: telemeter-client
    namespace: openshift-monitoring
    resourceVersion: "476624547"
    uid: bbfbeb02-dd68-4f02-8096-d5c62d83607a
  subsets:
  - addresses:
    - ip: 10.128.23.8
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: telemeter-client-766776b69c-qg7xf
        namespace: openshift-monitoring
        resourceVersion: "476624546"
        uid: 97b9c7db-0cd0-4de4-aab1-972a3e67b9f2
    ports:
    - name: https
      port: 8443
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-04T21:41:43Z"
    labels:
      app.kubernetes.io/component: query-layer
      app.kubernetes.io/instance: thanos-querier
      app.kubernetes.io/name: thanos-query
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 0.23.2
    name: thanos-querier
    namespace: openshift-monitoring
    resourceVersion: "472847139"
    uid: 747571c8-324b-45e3-aac2-f27df6bd7d11
  subsets:
  - addresses:
    - ip: 10.128.20.10
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: thanos-querier-6f659dbbf7-vskh9
        namespace: openshift-monitoring
        resourceVersion: "472847137"
        uid: ed3a5e9e-8bbd-4a88-a1e6-4587d12d1dc3
    - ip: 10.131.22.241
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: thanos-querier-6f659dbbf7-clskr
        namespace: openshift-monitoring
        resourceVersion: "466147446"
        uid: bc08d2dc-cb0d-4abd-b771-f0d09fc69332
    ports:
    - name: tenancy-rules
      port: 9093
      protocol: TCP
    - name: tenancy
      port: 9092
      protocol: TCP
    - name: metrics
      port: 9094
      protocol: TCP
    - name: web
      port: 9091
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
