openshift-monitoring/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-04T21:48:14Z"
    name: alertmanager-main
    namespace: openshift-monitoring
    resourceVersion: "23689"
    uid: 5c0b310e-b1d1-4d39-b28f-f387906b8db8
  spec:
    host: alertmanager-main-openshift-monitoring.apps.ocp4azu.dirtrab.cl
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: alertmanager-main
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-04T21:49:23Z"
        status: "True"
        type: Admitted
      host: alertmanager-main-openshift-monitoring.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 120s
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-04T21:48:14Z"
    name: grafana
    namespace: openshift-monitoring
    resourceVersion: "23692"
    uid: c736667c-0fce-44a9-b2c6-6aceb563622c
  spec:
    host: grafana-openshift-monitoring.apps.ocp4azu.dirtrab.cl
    port:
      targetPort: https
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: grafana
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-04T21:49:24Z"
        status: "True"
        type: Admitted
      host: grafana-openshift-monitoring.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-04T21:48:14Z"
    name: prometheus-k8s
    namespace: openshift-monitoring
    resourceVersion: "23691"
    uid: 44d8de94-f2e8-4cdb-b377-ef247bb00697
  spec:
    host: prometheus-k8s-openshift-monitoring.apps.ocp4azu.dirtrab.cl
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: prometheus-k8s
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-04T21:49:23Z"
        status: "True"
        type: Admitted
      host: prometheus-k8s-openshift-monitoring.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-04T21:48:14Z"
    labels:
      app.kubernetes.io/component: query-layer
      app.kubernetes.io/instance: thanos-querier
      app.kubernetes.io/name: thanos-query
      app.kubernetes.io/part-of: openshift-monitoring
      app.kubernetes.io/version: 0.23.2
    name: thanos-querier
    namespace: openshift-monitoring
    resourceVersion: "23690"
    uid: fa4de991-f7bb-4add-8f25-0b02236baeb6
  spec:
    host: thanos-querier-openshift-monitoring.apps.ocp4azu.dirtrab.cl
    path: /api
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: thanos-querier
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-04T21:49:24Z"
        status: "True"
        type: Admitted
      host: thanos-querier-openshift-monitoring.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
